do not fail deleting a key if KEY_CONSIDERED message is seen

These are new in GnuPG 2.1. For extra sanity check that the given key
fingerprint is actually in the list of keys that are about to be deleted.

BUG:365791